--- a/src/caesar.vcxproj.filters
+++ b/src/caesar.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="sf2cute-0.2\src\sf2cute\riff_smpl_chunk.hpp">
       <Filter>Header Files\sf2cute</Filter>
     </ClInclude>
+    <ClInclude Include="GlobalFuncs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sf2cute-0.2\src\sf2cute\file.cpp">
@@ -192,6 +195,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Cseq.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GlobalFuncs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
